--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
@@ -12,232 +16,232 @@ body {
 }
 
 .calendar div:nth-child(1)::before {
-  content: "1";
+  content: '1';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(2)::before {
-  content: "2";
+  content: '2';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(3)::before {
-  content: "3";
+  content: '3';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(4)::before {
-  content: "4";
+  content: '4';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(5)::before {
-  content: "5";
+  content: '5';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(6)::before {
-  content: "6";
+  content: '6';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(7)::before {
-  content: "7";
+  content: '7';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(8)::before {
-  content: "8";
+  content: '8';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(9)::before {
-  content: "9";
+  content: '9';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(10)::before {
-  content: "10";
+  content: '10';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(11)::before {
-  content: "11";
+  content: '11';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(12)::before {
-  content: "12";
+  content: '12';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(13)::before {
-  content: "13";
+  content: '13';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(14)::before {
-  content: "14";
+  content: '14';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(15)::before {
-  content: "15";
+  content: '15';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(16)::before {
-  content: "16";
+  content: '16';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(17)::before {
-  content: "17";
+  content: '17';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(18)::before {
-  content: "18";
+  content: '18';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(19)::before {
-  content: "19";
+  content: '19';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(20)::before {
-  content: "20";
+  content: '20';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(21)::before {
-  content: "21";
+  content: '21';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(22)::before {
-  content: "22";
+  content: '22';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(23)::before {
-  content: "23";
+  content: '23';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(24)::before {
-  content: "24";
+  content: '24';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(25)::before {
-  content: "25";
+  content: '25';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(26)::before {
-  content: "26";
+  content: '26';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(27)::before {
-  content: "27";
+  content: '27';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(28)::before {
-  content: "28";
+  content: '28';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(29)::before {
-  content: "29";
+  content: '29';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(30)::before {
-  content: "30";
+  content: '30';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar div:nth-child(31)::before {
-  content: "31";
+  content: '31';
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.calendar--28 div:nth-child(n+29) {
-  visibility: hidden;
+.calendar--month-length-28 div:nth-child(n + 29) {
+  display: none;
 }
 
-.calendar--29 div:nth-child(n+30) {
-  visibility: hidden;
+.calendar--month-length-29 div:nth-child(n + 30) {
+  display: none;
 }
 
-.calendar--30 div:nth-child(n+31) {
-  visibility: hidden;
+.calendar--month-length-30 div:nth-child(n + 31) {
+  display: none;
 }
 
-.calendar--31 div:nth-child(n+32) {
-  visibility: hidden;
+.calendar--month-length-31 div:nth-child(n + 32) {
+  display: none;
 }
 
-.calendar--mon div:nth-child(1) {
+.calendar--start-day-mon div:nth-child(1) {
   margin-left: 0;
 }
 
-.calendar--tue div:nth-child(1) {
+.calendar--start-day-tue div:nth-child(1) {
   margin-left: 101px;
 }
 
-.calendar--wed div:nth-child(1) {
+.calendar--start-day-wed div:nth-child(1) {
   margin-left: 202px;
 }
 
-.calendar--thu div:nth-child(1) {
+.calendar--start-day-thu div:nth-child(1) {
   margin-left: 303px;
 }
 
-.calendar--fri div:nth-child(1) {
+.calendar--start-day-fri div:nth-child(1) {
   margin-left: 404px;
 }
 
-.calendar--sat div:nth-child(1) {
+.calendar--start-day-sat div:nth-child(1) {
   margin-left: 505px;
 }
 
-.calendar--sun div:nth-child(1) {
+.calendar--start-day-sun div:nth-child(1) {
   margin-left: 606px;
 }
 
