--- a/src/styles/month.scss
+++ b/src/styles/month.scss
@@ -1,12 +1,12 @@
 @import 'variables';
 
 .calendar {
-  width: $cellsize * 7 + 6px;
+  width: $cellsize * 7 + $gap * 6;
   padding: 10px;
 
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $gap;
 
   &__day {
     box-sizing: border-box;
@@ -47,7 +47,7 @@
 @each $day, $index in $days {
   .calendar--start-day-#{$day} {
     .calendar__day:first-child {
-      margin-left: $index * $cellsize + $index;
+      margin-left: $index * $cellsize + $index * $gap;
     }
   }
 }
