--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,9 +1,9 @@
 .calendar {
-  width: $calendar-width;
+  max-width: $calendar-width;
   display: flex;
   flex-wrap: wrap;
   gap: $gap-between;
-  margin: 20px;
+  padding-left: 10px;
 
   &__day {
     position: relative;
@@ -12,13 +12,14 @@
 
     width: $day-size;
     height: $day-size;
-    line-height: $day-size;
+    line-height: $day-size - 2px;
+    text-align: center;
 
     border: $day-border;
     color: $day-text-color;
     background-color: $day-background-color;
 
-    transition: transform 0.5s ease-in-out;
+    transition: all 0.5s;
 
     &:hover {
       cursor: pointer;
@@ -28,7 +29,7 @@
   }
 
   @each $day, $first-day-shift in $days-of-the-week {
-    &--start-day--#{$day} &__day:first-of-type {
+    &--start-day-#{$day} &__day:first-of-type {
       margin-left: $first-day-shift;
     }
   }
@@ -40,7 +41,7 @@
   }
 
   @for $index from 28 through 31 {
-    &--month-length--#{$index} &__day:nth-child(n + #{$index + 1}) {
+    &--month-length-#{$index} &__day:nth-child(n + #{$index + 1}) {
       display: none;
     }
   }
