add task solution3

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,6 +53,7 @@ body {
     @for $o from 1 through $i {
       &--month-length-#{$i} &__day:nth-child(n + #{$o})::before {
         content: '#{$o}';
+        margin-left: 1px;
       }
     }
   }
