add $gap instead 1px

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,7 +59,7 @@ $days: mon, tue, wed, thu, fri, sat, sun;
   @each $day in $days {
     $index: list.index($days, $day) - 1;
     &--start-day-#{$day} .calendar__day:nth-child(1) {
-      margin-left: $index * ($day-size + 1px);
+      margin-left: $index * ($day-size + $gap);
     }
   }
 }
