--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,12 +37,14 @@ body {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
 
     &:hover {
       cursor: pointer;
       background: #ffbfcb;
       transform: translateY(-20px);
-      animation-duration: 0.5s;
     }
   }
 
