add calendar fix 1

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,6 +46,8 @@ body {
       background: #ffbfcb;
       transform: translateY(-20px);
     }
+
+    /* Dodano pustą linię przed następną deklaracją */
   }
 
   @each $count in $days-count {
