add calendar fix 3

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -47,7 +47,7 @@ body {
       transform: translateY(-20px);
     }
 
-    /* Dodano pustą linię przed następną deklaracją */
+    /* Dodano pustą linię tutaj, aby rozdzielić grupy reguł */
   }
 
   @each $count in $days-count {
