--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,68 +1,79 @@
-$days-count: 28, 29, 30, 31;
-$cell-size: 100px;
-$days-of-the-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+$cellsize: 100px;
+$gap: 1px;
+$days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
 
 body {
   margin: 0;
+  padding: 0;
+}
+
+.calendar-wrapper {
   height: 100vh;
-  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .calendar {
-  display: flex;
-  flex-flow: wrap;
-  box-sizing: border-box;
-  width: 7 * $cell-size + 6px;
-  gap: 1px;
+  width: $cellsize * 7 + $gap * 6;
+  padding: 10px;
 
-  & &__day {
-    display: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+
+  &__day {
     box-sizing: border-box;
-    background: #eee;
-    height: $cell-size;
-    width: $cell-size;
+    display: flex;
+    background-color: #eee;
+    width: $cellsize;
+    height: $cellsize;
     border: 1px solid black;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    position: relative;
     transition:
-      background-color 0.5s,
-      transform 0.5s;
+      background-color 500ms,
+      transform 500ms;
+
+    &::before {
+      content: '';
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+    }
 
     &:hover {
+      background-color: #ffbfcb;
       cursor: pointer;
-      background: #ffbfcb;
-      transform: translateY(-20px);
+      transform: translate(0, -20px);
     }
   }
+}
 
-  @each $count in $days-count {
-    &--month-length-#{$count} :nth-child(-n + #{$count}) {
-      display: flex;
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+}
 
-      @for $i from 1 through $count {
-        &:nth-child(#{$i})::before {
-          content: '#{$i}';
+@each $day, $index in $days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: $index * $cellsize + $index * $gap;
+    }
+  }
+}
+
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} {
+    @if $i < 31 {
+      @for $j from ($i + 1) through 31 {
+        .calendar__day:nth-child(#{$j}) {
+          display: none;
         }
       }
-    }
-  }
-
-  @each $day, $i in $days-of-the-week {
-    &--start-day-#{$day} :first-child {
-      margin-left: ($i * $cell-size) + $i;
     }
   }
 }
