--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -30,8 +30,8 @@ body {
   border: 1px solid black;
 }
 
-.calendar__day--1::before {
-  content: '1';
+.calendar__day::before {
+  content: "";
   display: flex;
   margin: auto;
   align-items: center;
@@ -39,336 +39,130 @@ body {
   color: black;
   font-family: Arial, sans-serif;
   font-size: 30px;
+}
+
+.calendar__day--1::before {
+  content: "1";
 }
 
 .calendar__day--2::before {
-  content: '2';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "2";
 }
 
 .calendar__day--3::before {
-  content: '3';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "3";
 }
 
 .calendar__day--4::before {
-  content: '4';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "4";
 }
 
 .calendar__day--5::before {
-  content: '5';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "5";
 }
 
 .calendar__day--6::before {
-  content: '6';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "6";
 }
 
 .calendar__day--7::before {
-  content: '7';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "7";
 }
 
 .calendar__day--8::before {
-  content: '8';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "8";
 }
 
 .calendar__day--9::before {
-  content: '9';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "9";
 }
 
 .calendar__day--10::before {
-  content: '10';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "10";
 }
 
 .calendar__day--11::before {
-  content: '11';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "11";
 }
 
 .calendar__day--12::before {
-  content: '12';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "12";
 }
 
 .calendar__day--13::before {
-  content: '13';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "13";
 }
 
 .calendar__day--14::before {
-  content: '14';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "14";
 }
 
 .calendar__day--15::before {
-  content: '15';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "15";
 }
 
 .calendar__day--16::before {
-  content: '16';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "16";
 }
 
 .calendar__day--17::before {
-  content: '17';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "17";
 }
 
 .calendar__day--18::before {
-  content: '18';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "18";
 }
 
 .calendar__day--19::before {
-  content: '19';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "19";
 }
 
 .calendar__day--20::before {
-  content: '20';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "20";
 }
 
 .calendar__day--21::before {
-  content: '21';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "21";
 }
 
 .calendar__day--22::before {
-  content: '22';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "22";
 }
 
 .calendar__day--23::before {
-  content: '23';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "23";
 }
 
 .calendar__day--24::before {
-  content: '24';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "24";
 }
 
 .calendar__day--25::before {
-  content: '25';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "25";
 }
 
 .calendar__day--26::before {
-  content: '26';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "26";
 }
 
 .calendar__day--27::before {
-  content: '27';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "27";
 }
 
 .calendar__day--28::before {
-  content: '28';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "28";
 }
 
 .calendar__day--29::before {
-  content: '29';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "29";
 }
 
 .calendar__day--30::before {
-  content: '30';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "30";
 }
 
 .calendar__day--31::before {
-  content: '31';
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  content: "31";
 }
 
 .calendar__day:hover {
@@ -378,19 +172,19 @@ body {
   transition: all 500ms linear;
 }
 
-.calendar--month-length-28 .calendar__day:nth-child(n + 29) {
+.calendar--month-length-28 .calendar__day:nth-child(n+29) {
   display: none;
 }
 
-.calendar--month-length-29 .calendar__day:nth-child(n + 30) {
+.calendar--month-length-29 .calendar__day:nth-child(n+30) {
   display: none;
 }
 
-.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
+.calendar--month-length-30 .calendar__day:nth-child(n+31) {
   display: none;
 }
 
-.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
+.calendar--month-length-31 .calendar__day:nth-child(n+32) {
   display: none;
 }
 
@@ -420,4 +214,4 @@ body {
 
 .calendar--start-day-sun .calendar__day:first-child {
   margin-left: calc(606px);
-} /*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
