--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,229 @@
 body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
+}
+
+.calendar {
+  flex-wrap: wrap;
+  gap: 1px;
+  max-width: 706px;
+  padding: 10px;
+  display: flex;
+  position: absolute;
+}
+
+.calendar__day {
+  display: flex;
+  box-sizing: border-box;
+  border: 1px solid black;
+  background: #eee;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  gap: 1px;
+  position: relative;
+  transition: all 0.5s;
+
+  &:hover {
+    cursor: pointer;
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+  }
+
+  &:first-child::after {
+    content: '1';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(2)::after {
+    content: '2';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(3)::after {
+    content: '3';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+
+  &:nth-child(4)::after {
+    content: '4';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+
+  &:nth-child(5)::after {
+    content: '5';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(6)::after {
+    content: '6';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(7)::after {
+    content: '7';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(8)::after {
+    content: '8';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(9)::after {
+    content: '9';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(10)::after {
+    content: '10';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(11)::after {
+    content: '11';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(12)::after {
+    content: '12';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(13)::after {
+    content: '13';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(14)::after {
+    content: '14';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(15)::after {
+    content: '15';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(16)::after {
+    content: '16';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(17)::after {
+    content: '17';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(18)::after {
+    content: '18';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(19)::after {
+    content: '19';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(20)::after {
+    content: '20';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(21)::after {
+    content: '21';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(22)::after {
+    content: '22';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(23)::after {
+    content: '23';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(24)::after {
+    content: '24';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(25)::after {
+    content: '25';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(26)::after {
+    content: '26';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(27)::after {
+    content: '27';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(28)::after {
+    content: '28';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(29)::after {
+    content: '29';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(30)::after {
+    content: '30';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+  &:nth-child(31)::after {
+    content: '31';
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+}
+
+.calendar--month-length-28 :nth-child(n + 29),
+.calendar--month-length-29 :nth-child(n + 30),
+.calendar--month-length-30 :nth-child(n + 31),
+.calendar--month-length-31 :nth-child(n + 32) {
+  display: none;
+}
+
+.calendar--start-day-mon :first-child {
+  margin-left: 0;
+}
+
+.calendar--start-day-tue :first-child {
+  margin-left: 101px;
+}
+
+.calendar--start-day-wed :first-child {
+  margin-left: 202px;
+}
+
+.calendar--start-day-thu :first-child {
+  margin-left: 303px;
+}
+
+.calendar--start-day-fri :first-child {
+  margin-left: 404px;
+}
+
+.calendar--start-day-sat :first-child {
+  margin-left: 505px;
+}
+
+.calendar--start-day-sun :first-child {
+  margin-left: 606px;
 }
