--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,7 +78,7 @@ $month-lengths: (
   }
 
   @each $day, $value in $week-days {
-    &--start-day-#{$day}:first-child {
+    &--start-day-#{$day} {
       .calendar__day:first-child {
         margin-left: calc(
           #{$step} * (#{$value} - 1) + #{$gap-size} * (#{$value} - 1)
