--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,9 +50,6 @@ $days: mon, tue, wed, thu, fri, sat, sun;
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translateY(-20px);
-      transition:
-        background-color 0.5s,
-        transform 0.5s;
     }
   }
 
@@ -62,17 +59,16 @@ $days: mon, tue, wed, thu, fri, sat, sun;
       margin-left: $index * ($day-size + $gap);
     }
   }
-}
 
-@for $day from 1 through 31 {
-  .calendar__day:nth-child(#{$day}):before {
-    content: '#{$day}';
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day}):before {
+      content: '#{$day}';
+    }
   }
-}
 
-@for $day from 28 through 31 {
-  .calendar--month-length-#{$day}
-    .calendar__day:nth-last-child(-n + #{31 - $day}) {
-    display: none;
+  @for $day from 28 through 31 {
+    &--month-length-#{$day} &__day:nth-last-child(-n + #{31 - $day}) {
+      display: none;
+    }
   }
 }
