--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -37,23 +37,23 @@
         transform 0.5s;
     }
   }
-}
 
-@for $day from 1 through 31 {
-  .calendar__day:nth-child(#{$day}):before {
-    content: '#{$day}';
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day}):before {
+      content: '#{$day}';
+    }
   }
-}
 
-@each $day, $index in $day-names {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: (($index - 1) * $day-size) + (($index - 1) * $gap);
+  @each $day, $index in $day-names {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: (($index - 1) * $day-size) + (($index - 1) * $gap);
+    }
   }
-}
 
-@for $day from 28 through 31 {
-  .calendar--month-length-#{$day}
-    .calendar__day:nth-last-child(-n + #{31 - $day}) {
-    display: none;
+  @for $day from 28 through 31 {
+    &--month-length-#{$day}
+      .calendar__day:nth-last-child(-n + #{31 - $day}) {
+      display: none;
+    }
   }
 }
