--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,7 @@ body {
     width: $base-size;
     border: 1px solid #000;
     background-color: $day-color;
-    transition: background-color transform 0.5s;
+    transition: background-color 0.5s transform 0.5s;
 
     &::before {
       display: flex;
@@ -41,20 +41,20 @@ body {
 }
 
 @for $day from 1 through 31 {
-  .calendar__day:nth-child(#{$day}):before {
+  .&__day:nth-child(#{$day}):before {
     content: '#{$day}';
   }
 }
 
 @each $day, $index in $day-names {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
+  &--start-day-#{$day} &__day:first-child {
     margin-left: (($index - 1) * $base-size) + (($index - 1) * $base-gap);
   }
 }
 
 @for $day from 28 through 31 {
-  .calendar--month-length-#{$day}
-    .calendar__day:nth-last-child(-n + #{31 - $day}) {
+  &--month-length-#{$day}
+    &__day:nth-last-child(-n + #{31 - $day}) {
     display: none;
   }
 }
