--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,8 +53,7 @@ body {
 }
 
 @for $day from 28 through 31 {
-  &--month-length-#{$day}
-    &__day:nth-last-child(-n + #{31 - $day}) {
+  &--month-length-#{$day} &__day:nth-last-child(-n + #{31 - $day}) {
     display: none;
   }
 }
