--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,7 +40,7 @@ body {
   }
 
   @for $day from 1 through 31 {
-    .&__day:nth-child(#{$day}):before {
+    &__day:nth-child(#{$day}):before {
       content: '#{$day}';
     }
   }
