--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,7 +61,9 @@ body {
     justify-content: center;
     align-items: center;
 
-    transition: transform 0.5s;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
