add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,6 +51,7 @@ $calendar-transition-duration: 0.5s;
   }
 
   counter-reset: day;
+
   @for $i from 1 through 31 {
     .day:nth-child(#{$i})::before {
       content: '#{$i}';
@@ -66,7 +67,7 @@ $calendar-transition-duration: 0.5s;
   @each $day,
     $margin
       in (
-        sun: 0px,
+        sun: 0,
         mon: 101px,
         tue: 202px,
         wed: 303px,
