add changes after review

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,6 @@
 $main-bg: #eee;
 $hover-bg: #ffbfcb;
-$size: 100px;
-$font: Arial, sans-serif;
-$font-size: 30px;
+$day-size: 100px;
 $hover-offset: 20px;
-$gap: 1px;
-$padding: 10px;
-$border: 1px solid black;
+$calendar-gap: 1px;
+$calendar-padding: 10px;
