--- a/src/styles/_calendar.scss
+++ b/src/styles/_calendar.scss
@@ -1,18 +1,19 @@
 .calendar {
   box-sizing: border-box;
-  padding: $padding;
-  width: ($padding * 2) + ($gap * 6) + ($size * 7);
+  padding: $calendar-padding;
+  width: ($calendar-padding * 2) + ($day-size * 7) + ($calendar-gap * 6);
   display: flex;
   align-items: center;
-  gap: $gap;
+  gap: $calendar-gap;
   flex-wrap: wrap;
 
   &__day {
     box-sizing: border-box;
-    width: $size;
-    height: $size;
+    width: $day-size;
+    height: $day-size;
     background-color: $main-bg;
-    border: $border;
+    border: 1px solid black
+    ;
     position: relative;
     transition: all 0.5s;
 
@@ -44,7 +45,7 @@
 @each $day, $margin in (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6)
 {
   .calendar--start-day-#{$day} .calendar__day:nth-child(1) {
-    margin-left: ($size + $gap) * $margin;
+    margin-left: ($day-size + $calendar-gap) * $margin;
   }
 }
 
