--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -5,9 +5,6 @@
   justify-content: center;
   height: 100vh;
   margin: 0;
-
-  font: {
-    family: $font;
-    size: $font-size;
-  }
+  font-family: Arial, sans-serif;
+  font-size: 30px;
 }
