--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,77 +1,3 @@
-$day-size: 100px;
-$col-count: 7;
-$padding: 10px;
-$gap: 1px;
-$week-day: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sat': 5,
-  'sun': 6,
-);
-$month-length: 31;
-
-body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: ($day-size + $gap) * $col-count;
-  gap: $gap;
-  padding: $padding;
-
-  &__day {
-    display: flex;
-    height: $day-size;
-    width: $day-size;
-    border: 1px solid black;
-    background-color: #eee;
-
-    position: relative;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-
-    &:hover {
-      cursor: pointer;
-      background-color: #ffbfcb;
-      transform: translate(0, -20px);
-      animation-duration: 0, 5s;
-    }
-
-    @for $number from 1 through $month-length {
-      &:nth-child(#{$number})::before {
-        content: '#{$number}';
-        display: block;
-        position: absolute;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-      }
-    }
-  }
-
-  @each $day, $index in $week-day {
-    &--start-day-#{$day} {
-      &__day:first-child {
-        margin-left: ($day-size + $gap) * $index;
-      }
-    }
-  }
-
-  @for $day from 28 through $month-length {
-    .calendar--month-length-#{$day} {
-      .calendar__day:nth-child(n + #{$day - 1}) {
-        display: none;
-      }
-    }
-  }
-}
+@import '../utils/variables';
+@import '../styles/blocks/body';
+@import '../styles/blocks/calendar';
