add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,7 +1,7 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: ($day-size + $gap) * $col-count;
+  width: ($day-size + $gap) * $col-count - $gap;
   gap: $gap;
   padding: $padding;
 
