--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -22,8 +22,7 @@
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
-      animation-duration: 0.5s;
-      transition: 0.5s;
+      transition-duration: 0.5s;
     }
 
     @for $number from 1 through $month-length {
