--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@ $cell-size: 100px;
 $gap-size: 1px;
 $padding-size: 10px;
 $border-size: 1px;
-$calendar-width: (7 * $sell-size) + (6 * $gap-size);
+$calendar-width: (7 * $cell-size) + (6 * $gap-size);
 $days: (
   'mon': 0,
   'tue': 1,
