--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,48 @@
+$calendar-day-size: 100px;
+$calendar-day-border: 1px solid black;
+$calendar-day-color: #eee;
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  padding: 10px;
+  height: calc($calendar-day-size * 7);
+  width: calc($calendar-day-size * 7);
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  gap: 1px;
+  &__day {
+    width: $calendar-day-size;
+    height: $calendar-day-size;
+    box-sizing: border-box;
+    background-color: $calendar-day-color;
+    border: 1px solid black;
+    gap: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}) {
+        &::before {
+          content: '#{$i}';
+          font-size: 30px;
+          text-align: center;
+        }
+      }
+    }
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translate(0, -20px);
+      transition: 0.5s;
+    }
+  }
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
