--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,15 +3,7 @@ $calendar-day-border: 1px solid black;
 $calendar-day-color: #eee;
 $gap-size: 1px;
 $padding-size: 10px;
-$start-day: (
-  mon 0,
-  tue ($calendar-day-size + $gap-size),
-  wed ($calendar-day-size + $gap-size) * 2,
-  thu ($calendar-day-size + $gap-size) * 3,
-  fri ($calendar-day-size + $gap-size) * 4,
-  sat ($calendar-day-size + $gap-size) * 5,
-  sun ($calendar-day-size + $gap-size) * 6
-);
+$start-day: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
 
 body {
   margin: 0;
@@ -38,21 +30,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 0.5s;
+    font-size: 30px;
 
     @for $i from 1 through 31 {
-      &:nth-child(#{$i}) {
-        &::before {
-          content: '#{$i}';
-          font-size: 30px;
-          text-align: center;
-        }
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
       }
     }
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
-      transition: 0.5s;
     }
   }
 
@@ -62,10 +51,10 @@ body {
     }
   }
 
-  @each $day, $margin-left in $start-day {
+  @each $day, $day-number in $start-day {
     &--start-day-#{$day} {
       .calendar__day:first-child {
-        margin-left: $margin-left;
+        margin-left: $day-number * ($calendar-day-size + $gap-size);
       }
     }
   }
