little change name of class

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -16,7 +16,7 @@ $start-day: // a
 $month-length: 28, 29, 30, 31;
 
 @for $i from 28 through 31 {
-  .calendar .month--length:nth-child(#{$i}) {
+  .calendar .day__month--length:nth-child(#{$i}) {
     opacity: 1;
   }
 }
