add task solution

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
   height: 100px;
   box-sizing: border-box;
   background-color: #eee;
-  border: 2px solid black;
+  border: 1px solid black;
   margin: 0;
   padding: 10px;
   display: flex;
@@ -243,19 +243,19 @@
   margin-left: 605px;
 }
 
-.calendar .month--length:nth-child(28) {
+.calendar .day__month--length:nth-child(28) {
   opacity: 1;
 }
 
-.calendar .month--length:nth-child(29) {
+.calendar .day__month--length:nth-child(29) {
   opacity: 1;
 }
 
-.calendar .month--length:nth-child(30) {
+.calendar .day__month--length:nth-child(30) {
   opacity: 1;
 }
 
-.calendar .month--length:nth-child(31) {
+.calendar .day__month--length:nth-child(31) {
   opacity: 1;
 }
 
