--- a/src/styles/blocks/days.scss
+++ b/src/styles/blocks/days.scss
@@ -3,7 +3,7 @@
   height: 100px;
   box-sizing: border-box;
   background-color: #eee;
-  border: 2px solid black;
+  border: 1px solid black;
   margin: 0;
   padding: 10px;
   display: flex;
@@ -24,4 +24,4 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
   }
-}
+};
