--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-body {
-  margin: 0;
-}
+@import './blocks/variables';
+@import './blocks/global';
+@import './blocks/function';
+@import './blocks/calendar';
