fix variables and functions

--- a/src/styles/blocks/function.scss
+++ b/src/styles/blocks/function.scss
@@ -12,6 +12,6 @@
 
 @each $day, $shift in $week {
   .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: $shift + ($shift / 100);
+    margin-left: $shift + ($cell-width * $shift);
   }
 }
