--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -9,10 +9,10 @@ $font-size: 30px;
 $animation-duration: 0.5s;
 $week: (
   'mon': 0,
-  'tue': 100px,
-  'wed': 200px,
-  'thu': 300px,
-  'fri': 400px,
-  'sat': 500px,
-  'sun': 600px,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
 );
