--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
   gap: 1px;
 }
 
-.day {
+.calendar__day {
   width: 100px;
   height: 100px;
   box-sizing: border-box;
@@ -21,242 +21,154 @@
   align-items: center;
   justify-content: center;
   transition: all 0.5s;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
 
-.day:hover {
+.calendar__day:nth-child(1)::before {
+  content: '1';
+}
+
+.calendar__day:nth-child(2)::before {
+  content: '2';
+}
+
+.calendar__day:nth-child(3)::before {
+  content: '3';
+}
+
+.calendar__day:nth-child(4)::before {
+  content: '4';
+}
+
+.calendar__day:nth-child(5)::before {
+  content: '5';
+}
+
+.calendar__day:nth-child(6)::before {
+  content: '6';
+}
+
+.calendar__day:nth-child(7)::before {
+  content: '7';
+}
+
+.calendar__day:nth-child(8)::before {
+  content: '8';
+}
+
+.calendar__day:nth-child(9)::before {
+  content: '9';
+}
+
+.calendar__day:nth-child(10)::before {
+  content: '10';
+}
+
+.calendar__day:nth-child(11)::before {
+  content: '11';
+}
+
+.calendar__day:nth-child(12)::before {
+  content: '12';
+}
+
+.calendar__day:nth-child(13)::before {
+  content: '13';
+}
+
+.calendar__day:nth-child(14)::before {
+  content: '14';
+}
+
+.calendar__day:nth-child(15)::before {
+  content: '15';
+}
+
+.calendar__day:nth-child(16)::before {
+  content: '16';
+}
+
+.calendar__day:nth-child(17)::before {
+  content: '17';
+}
+
+.calendar__day:nth-child(18)::before {
+  content: '18';
+}
+
+.calendar__day:nth-child(19)::before {
+  content: '19';
+}
+
+.calendar__day:nth-child(20)::before {
+  content: '20';
+}
+
+.calendar__day:nth-child(21)::before {
+  content: '21';
+}
+
+.calendar__day:nth-child(22)::before {
+  content: '22';
+}
+
+.calendar__day:nth-child(23)::before {
+  content: '23';
+}
+
+.calendar__day:nth-child(24)::before {
+  content: '24';
+}
+
+.calendar__day:nth-child(25)::before {
+  content: '25';
+}
+
+.calendar__day:nth-child(26)::before {
+  content: '26';
+}
+
+.calendar__day:nth-child(27)::before {
+  content: '27';
+}
+
+.calendar__day:nth-child(28)::before {
+  content: '28';
+}
+
+.calendar__day:nth-child(29)::before {
+  content: '29';
+}
+
+.calendar__day:nth-child(30)::before {
+  content: '30';
+}
+
+.calendar__day:nth-child(31)::before {
+  content: '31';
+}
+
+.calendar__day:hover {
   cursor: pointer;
   background-color: #ffbfcb;
   transform: translateY(-20px);
 }
 
-.calendar__day1::before {
-  content: "1";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+.calendar--month-length-28 :nth-child(n + 29) {
+  display: none;
 }
 
-.calendar__day2::before {
-  content: "2";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+.calendar--month-length-29 :nth-child(n + 30) {
+  display: none;
 }
 
-.calendar__day3::before {
-  content: "3";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+.calendar--month-length-30 :nth-child(n + 31) {
+  display: none;
 }
 
-.calendar__day4::before {
-  content: "4";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day5::before {
-  content: "5";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day6::before {
-  content: "6";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day7::before {
-  content: "7";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day8::before {
-  content: "8";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day9::before {
-  content: "9";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day10::before {
-  content: "10";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day11::before {
-  content: "11";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day12::before {
-  content: "12";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day13::before {
-  content: "13";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day14::before {
-  content: "14";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day15::before {
-  content: "15";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day16::before {
-  content: "16";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day17::before {
-  content: "17";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day18::before {
-  content: "18";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day19::before {
-  content: "19";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day20::before {
-  content: "20";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day21::before {
-  content: "21";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day22::before {
-  content: "22";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day23::before {
-  content: "23";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day24::before {
-  content: "24";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day25::before {
-  content: "25";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day26::before {
-  content: "26";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day27::before {
-  content: "27";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day28::before {
-  content: "28";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day29::before {
-  content: "29";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day30::before {
-  content: "30";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar__day31::before {
-  content: "31";
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.day--mon {
-  margin-left: 0;
-}
-
-.day--tue {
-  margin-left: 105px;
-}
-
-.day--wed {
-  margin-left: 205px;
-}
-
-.day--thu {
-  margin-left: 305px;
-}
-
-.day--fri {
-  margin-left: 405px;
-}
-
-.day--sat {
-  margin-left: 505px;
-}
-
-.day--sun {
-  margin-left: 606px;
-}
-
-.calendar .day__month--length:nth-child(28) {
-  opacity: 1;
-}
-
-.calendar .day__month--length:nth-child(29) {
-  opacity: 1;
-}
-
-.calendar .day__month--length:nth-child(30) {
-  opacity: 1;
-}
-
-.calendar .day__month--length:nth-child(31) {
-  opacity: 1;
+.calendar--month-length-31 :nth-child(n + 32) {
+  display: none;
 }
 
 body {
