--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -43,6 +43,9 @@ html {
     border: $border;
     display: flex;
     box-sizing: border-box;
+    transition:
+      transform $animation-duration ease,
+      background-color $animation-duration ease;
 
     &::before {
       counter-increment: day-counter;
@@ -53,7 +56,6 @@ html {
       cursor: pointer;
       background-color: $hover-color;
       transform: translateY(-20px);
-      transition: all $animation-duration;
     }
   }
 
