add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -10,4 +10,42 @@ body {
   padding: $padding;
   margin: auto;
   gap: $gap;
+
+  @each $day, $index in $days {
+    &--start-day--#{$day} {
+      & > .calendar__day:first-child {
+        margin-left: calc(
+          (#{$day-size} * #{$index}) +
+            (#{$gap} * #{$index}) +
+            (#{$padding}) +
+            (#{$border-size}) *
+            2
+        );
+      }
+    }
+  }
+
+  &--month-length--31 {
+    & > .calendar__day:nth-child(n + 32) {
+      display: none;
+    }
+  }
+
+  &--month-length--30 {
+    & > .calendar__day:nth-child(n + 31) {
+      display: none;
+    }
+  }
+
+  &--month-length--29 {
+    & > .calendar__day:nth-child(n + 30) {
+      display: none;
+    }
+  }
+
+  &--month-length--28 {
+    & > .calendar__day:nth-child(n + 29) {
+      display: none;
+    }
+  }
 }
