--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -6,3 +6,12 @@ $grey-color: #eee;
 $hover-color: #ffbfcb;
 $font-size: 30px;
 $animation-duration: 0.5s;
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
