update scss index to main

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,10 +6,10 @@
   width: 800px;
   padding: 10px;
 
-  @extend %start-day-sat;
+  @extend %start-day-sun;
 
   @for $i from 1 through $month-length {
-    .calendar__day-#{$i} {
+    &__day-#{$i} {
       display: flex;
       justify-content: center;
       align-items: center;
