--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,10 +6,10 @@ body {
   height: 100vh;
 }
 
-$calendar-day-with: 100px;
+$calendar-day-width: 100px;
 
 .calendar {
-  width: $calendar-day-with * 7 + 6px;
+  width: $calendar-day-width * 7 + 6px;
 
   display: flex;
   flex-wrap: wrap;
@@ -29,7 +29,7 @@ $calendar-day-with: 100px;
     &--start-day-#{$day} {
       .calendar__day:nth-child(1) {
         margin-left: (
-          $calendar-day-with * ($i) + ($calendar-day-with * ($i) / 100)
+          $calendar-day-width * ($i) + ($calendar-day-width * ($i) / 100)
         );
       }
     }
@@ -48,8 +48,8 @@ $calendar-day-with: 100px;
   &__day {
     box-sizing: border-box;
 
-    width: $calendar-day-with;
-    height: $calendar-day-with;
+    width: $calendar-day-width;
+    height: $calendar-day-width;
 
     background-color: #eee;
     border: 1px solid black;
